// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Icon > renders a custom size, class and stroke width 1`] = `
<svg
  aria-hidden="true"
  class="lucide lucide-sun icon tool-icon"
  fill="none"
  height="20"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="1.5"
  viewBox="0 0 24 24"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx="12"
    cy="12"
    r="4"
  />
  <path
    d="M12 2v2"
  />
  <path
    d="M12 20v2"
  />
  <path
    d="m4.93 4.93 1.41 1.41"
  />
  <path
    d="m17.66 17.66 1.41 1.41"
  />
  <path
    d="M2 12h2"
  />
  <path
    d="M20 12h2"
  />
  <path
    d="m6.34 17.66-1.41 1.41"
  />
  <path
    d="m19.07 4.93-1.41 1.41"
  />
</svg>
`;

exports[`Icon > renders the default 14px icon with the icon class 1`] = `
<svg
  aria-hidden="true"
  class="lucide lucide-x icon"
  fill="none"
  height="14"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="2"
  viewBox="0 0 24 24"
  width="14"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M18 6 6 18"
  />
  <path
    d="m6 6 12 12"
  />
</svg>
`;
